--- a/_posts/2013-12-13-apigee-on-phonegap.textile
+++ b/_posts/2013-12-13-apigee-on-phonegap.textile
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: ApiGee on PhoneGap
+title: Apigee on PhoneGap
 author: evan
 categories: [dev]
 tagline: 'Writing Cross Platform HTML5 Apps using PhoneGap and UserGrid'
@@ -17,7 +17,7 @@ Yesterday, "Apigee":http://apigee.com hosted a programming event to demonstrate 
 Greg was an engaging speaker, which is key when you spend all day in a room having a one-way conversation. I have only superficial knowledge of programming for the mobile web so this session was great for me. The data-attributes that I have been haphazardly copying and pasting in my bootstrap websites now make much more sense, and the mechanics of the jquery UI are much clearer to me now. Another topic was speeding up a workflow using Codiqa to quickly prototype user interfaces. Our entire front end was created painlessly, which wouldn't have been true if I had to code it from scratch.
 
 
-ApiGee's cloud hosted UserGrid solution is completely free to use with some generous usage limits. It has been very encouraging that so many companies are willing to have a free tier. I have gotten much further in my hacking together some cloud hosted web applications thanks to the free usage policies of Heroku and MongoHQ. The support of these companies is indespensible for a hobbyist or unfunded startup.
+Apigee's cloud hosted UserGrid solution is completely free to use with some generous usage limits. It has been very encouraging that so many companies are willing to have a free tier. I have gotten much further in my hacking together some cloud hosted web applications thanks to the free usage policies of Heroku and MongoHQ. The support of these companies is indespensible for a hobbyist or unfunded startup.
 
 
 Usergrid is a great alternative to "MongoHQ":https://www.mongohq.com. "The SDK":http://apigee.com/docs/app-services/content/installing-apigee-sdk-javascript is as easy to use as any MongoDB node package and Apigee's website has a fully functional front-end to operate on the data store as well as handle user access and run analytics. "UserGrid":https://github.com/apigee/usergrid-stack is an open source project that can run on your own backend server, so you aren't locked into Apigee's cloud service. I'm also excited about the messaging features that Apigee offers, though time didn't allow for us to have that discussion.
