Update pages and posts to pure blog format. Improve metadata for posts. Change page content to make sense with new site layout.

--- a/_posts/2013-12-13-apigee-on-phonegap.textile
+++ b/_posts/2013-12-13-apigee-on-phonegap.textile
@@ -1,8 +1,11 @@
 ---
-layout: post
+layout: blog
 title: Apigee on PhoneGap
 author: evan
 categories: [dev]
+tags:
+- Apigee
+- PhoneGap
 tagline: 'Writing Cross Platform HTML5 Apps using PhoneGap and UserGrid'
 ---
 I like Orlando--most of all because its residents enjoy summertime temperatures while the rest of the country is in a deep freeze.
