--- a/_now/2024_02_26.md
+++ b/_now/2024_02_26.md
@@ -6,13 +6,13 @@ classes:   wide
 author_profile: true
 ---
 
-What I'm doing [Now][now-page], February 27, 2024:
+What I'm doing [Now][now-page], February 26, 2024:
 
 * Learning [River Flows In You][river-flows-in-you-video] by [Yurima][yurima-wikipedia] on the [piano][river-flows-in-you-piano-sheet-music]
 * Finding a daily motivational quote to share with family.
 * Walking for active recovery from the gym.
 * Updating my resume and LinkedIn profile.
-* Create some notes using [obsidian](https://obsidian.md/)
+* Share some favorite photos from my trip to Italy in [Rome][portfolio-rome] and [Pompei][portfolio-pompei]
 
 <!-- Reference-Style Links //-->
 [now-page]: https://nownownow.com/
@@ -20,3 +20,6 @@ What I'm doing [Now][now-page], February 27, 2024:
 [river-flows-in-you-video]: https://youtu.be/7maJOI3QMu0?si=RfTDOqLxnxh5X0Rd
 [river-flows-in-you-piano-sheet-music]: https://nizer.com/pdfs/nizer_buugeng.pdf
 [yurima-wikipedia]: https://en.wikipedia.org/wiki/Yiruma
+
+[portfolio-rome]: https://neverbeenever.com/rome/
+[portfolio-pompei]: https://neverbeenever.com/pompei/
