--- a/_now/2024_09.md
+++ b/_now/2024_09.md
@@ -6,7 +6,25 @@ classes:   wide
 author_profile: true
 ---
 
-What I'm doing [Now][now-page], February 26, 2024:
+Week 9 of [Now][now-page].
+
+
+## February 28, 2024
+
+* Facebook Interview prep
+* Gym: Arms
+* Updating my resume and LinkedIn profile.
+* Practice [Hanon Exercises](https://www.amazon.com/Hanon-Virtuoso-Exercises-Complete-Schirmers/dp/0793525446) 1 & 2 on piano.
+* Finding a daily motivational quote to share with family.
+
+## February 27, 2024
+
+* Learning [River Flows In You][river-flows-in-you-video] by [Yurima][yurima-wikipedia] on the [piano][river-flows-in-you-piano-sheet-music]
+* Finding a daily motivational quote to share with family.
+* Walking for active recovery from the gym.
+* Create some notes using [obsidian](https://obsidian.md/)
+
+## February 26, 2024
 
 * Learning [River Flows In You][river-flows-in-you-video] by [Yurima][yurima-wikipedia] on the [piano][river-flows-in-you-piano-sheet-music]
 * Finding a daily motivational quote to share with family.
